--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -31,7 +31,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Generate template
+      # - name: Fetch Swagger
+      #   run: fetch-swagger
+      - name: Generate start page
         run: |
           chmod +x ./scripts/generate-start-page.sh
           ./scripts/generate-start-page.sh
@@ -44,3 +46,21 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+
+  # fetch-swagger:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v1
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: us-east-1
+  #     - name: Pull file from S3 bucket
+  #       run: aws s3 cp s3://some-s3-bucket/helm/latest.json ./docs/latest.json
+  #     - name: Helm docs
+  #       run: |
+  #         chmod +x ./scripts/generate-swagger-template.sh
+  #         ./scripts/generate-swagger-template.sh
