--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -24,9 +24,6 @@ concurrency:
 jobs:
   # Single deploy job since we're just deploying
   deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -47,20 +44,20 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v2
 
-  # fetch-swagger:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #     - name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@v1
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-region: us-east-1
-  #     - name: Pull file from S3 bucket
-  #       run: aws s3 cp s3://some-s3-bucket/helm/latest.json ./docs/latest.json
-  #     - name: Helm docs
-  #       run: |
-  #         chmod +x ./scripts/generate-swagger-template.sh
-  #         ./scripts/generate-swagger-template.sh
+  fetch-swagger:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Pull file from S3 bucket
+        run: aws s3 cp s3://some-s3-bucket/helm/latest.json ./docs/latest.json
+      - name: Helm docs
+        run: |
+          chmod +x ./scripts/generate-swagger-template.sh
+          ./scripts/generate-swagger-template.sh
